warnings and compiler issues